Update test data

--- a/data-processing/data_processing.ipynb
+++ b/data-processing/data_processing.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,6 +85,33 @@
     "    verificationTimeTaken.append(\n",
     "        cleaned_dfs[dataset]['Verification Time Taken'].mean())\n",
     "    totalTimeTaken.append(cleaned_dfs[dataset]['Total Time Taken'].mean())\n",
+    "\n",
+    "summary_df = pd.DataFrame({\n",
+    "    \"Use Case\": ['Supervisor Student', 'Supervisor Student Protocol', 'Doctor Nurse', 'Doctor Nurse Protocol', 'Employee Protocol'],\n",
+    "    \"Delegation Time Taken\": delegationTimeTaken,\n",
+    "    \"Verification Time Taken\": verificationTimeTaken,\n",
+    "    \"Total Time Taken\": totalTimeTaken\n",
+    "})\n",
+    "\n",
+    "summary_df.to_csv('./summary-cleaned.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delegationTimeTaken = []\n",
+    "verificationTimeTaken = []\n",
+    "totalTimeTaken = []\n",
+    "\n",
+    "for dataset in datasets:\n",
+    "    delegationTimeTaken.append(\n",
+    "        original_dfs[dataset]['Delegation Time Taken'].mean())\n",
+    "    verificationTimeTaken.append(\n",
+    "        original_dfs[dataset]['Verification Time Taken'].mean())\n",
+    "    totalTimeTaken.append(original_dfs[dataset]['Total Time Taken'].mean())\n",
     "\n",
     "summary_df = pd.DataFrame({\n",
     "    \"Use Case\": ['Supervisor Student', 'Supervisor Student Protocol', 'Doctor Nurse', 'Doctor Nurse Protocol', 'Employee Protocol'],\n",
