performance evaluation data processing

--- a/data-processing/performance_data_cleaning_script.ipynb
+++ b/data-processing/performance_data_cleaning_script.ipynb
@@ -16,35 +16,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "datasets = ['supervisorStudent', 'supervisorStudentProtocol', 'doctorNurse', 'doctorNurseProtocol', 'employeeProtocol']\n",
+    "datasets = ['Ed25519', 'Secp256k1']\n",
     "\n",
     "# Import Files\n",
-    "dfs = {dataset: pd.read_csv(f\"./collected-data/{dataset}.csv\") for dataset in datasets}\n"
+    "dfs = {dataset: pd.read_csv(f\"./collected-data/{dataset}.csv\") for dataset in datasets}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Remove Outliers "
+    "### Remove Outliers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Remove data outside from inter quatile range\n",
     "\n",
     "for dataset in datasets:\n",
-    "    columns = ['Delegation Time Taken', 'Verification Time Taken', 'Total Time Taken']\n",
+    "    columns = ['Delegation Time Taken', 'Delegation Memory Usage', 'Verification Time Taken', 'Verification Memory Usage', 'Retrieval Time Taken', 'Retrieval Memory Usage']\n",
     "    for column in columns:\n",
     "        Q1 = dfs[dataset][column].quantile(0.25)\n",
     "        Q3 = dfs[dataset][column].quantile(0.75)\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
