--- a/data-processing/performance_data_processing_script.ipynb
+++ b/data-processing/performance_data_processing_script.ipynb
@@ -16,13 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "datasets = ['supervisorStudent', 'supervisorStudentProtocol', 'doctorNurse', 'doctorNurseProtocol', 'employeeProtocol']\n",
+    "datasets = ['Ed25519', 'Secp256k1']\n",
     "\n",
     "# Import Files\n",
     "original_dfs = {dataset: pd.read_csv(f\"./collected-data/{dataset}.csv\") for dataset in datasets}\n",
@@ -39,18 +39,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "supervisorStudent: 101 → 70 (30.69% removed)\n",
-      "supervisorStudentProtocol: 101 → 70 (30.69% removed)\n",
-      "doctorNurse: 101 → 70 (30.69% removed)\n",
-      "doctorNurseProtocol: 101 → 70 (30.69% removed)\n",
-      "employeeProtocol: 101 → 70 (30.69% removed)\n"
+      "Ed25519: 101 → 73 (27.72% removed)\n",
+      "Secp256k1: 101 → 73 (27.72% removed)\n"
      ]
     }
    ],
@@ -63,64 +60,84 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Calculate Average Time Taken for Delegation, Verification and Total"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "delegationTimeTaken = []\n",
+    "delegationMemoryUsage = []\n",
     "verificationTimeTaken = []\n",
-    "totalTimeTaken = []\n",
+    "verificationMemoryUsage = []\n",
+    "retrievalTimeTaken = []\n",
+    "retrievalMemoryUsage = []\n",
     "\n",
     "for dataset in datasets:\n",
     "    delegationTimeTaken.append(\n",
     "        cleaned_dfs[dataset]['Delegation Time Taken'].mean())\n",
+    "    delegationMemoryUsage.append(\n",
+    "        cleaned_dfs[dataset]['Delegation Memory Usage'].mean())\n",
     "    verificationTimeTaken.append(\n",
     "        cleaned_dfs[dataset]['Verification Time Taken'].mean())\n",
-    "    totalTimeTaken.append(cleaned_dfs[dataset]['Total Time Taken'].mean())\n",
+    "    verificationMemoryUsage.append(\n",
+    "        cleaned_dfs[dataset]['Verification Memory Usage'].mean())\n",
+    "    retrievalTimeTaken.append(cleaned_dfs[dataset]['Retrieval Time Taken'].mean())\n",
+    "    retrievalMemoryUsage.append(cleaned_dfs[dataset]['Retrieval Memory Usage'].mean())\n",
     "\n",
     "summary_df = pd.DataFrame({\n",
-    "    \"Use Case\": ['Supervisor Student', 'Supervisor Student Protocol', 'Doctor Nurse', 'Doctor Nurse Protocol', 'Employee Protocol'],\n",
+    "    \"Algorithm\": ['Ed25519', 'Secp256k1'],\n",
     "    \"Delegation Time Taken\": delegationTimeTaken,\n",
+    "    \"Delegation Memory Usage\": delegationMemoryUsage,\n",
     "    \"Verification Time Taken\": verificationTimeTaken,\n",
-    "    \"Total Time Taken\": totalTimeTaken\n",
+    "    \"Verification Memory Usage\": verificationMemoryUsage,\n",
+    "    \"Retrieval Time Taken\": retrievalTimeTaken,\n",
+    "    \"Retrieval Memory Usage\": retrievalMemoryUsage\n",
     "})\n",
     "\n",
-    "summary_df.to_csv('./summary-cleaned.csv')"
+    "summary_df.to_csv('./performance-summary-cleaned.csv')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "delegationTimeTaken = []\n",
+    "delegationMemoryUsage = []\n",
     "verificationTimeTaken = []\n",
-    "totalTimeTaken = []\n",
+    "verificationMemoryUsage = []\n",
+    "retrievalTimeTaken = []\n",
+    "retrievalMemoryUsage = []\n",
     "\n",
     "for dataset in datasets:\n",
     "    delegationTimeTaken.append(\n",
     "        original_dfs[dataset]['Delegation Time Taken'].mean())\n",
+    "    delegationMemoryUsage.append(\n",
+    "        original_dfs[dataset]['Delegation Memory Usage'].mean())\n",
     "    verificationTimeTaken.append(\n",
     "        original_dfs[dataset]['Verification Time Taken'].mean())\n",
-    "    totalTimeTaken.append(original_dfs[dataset]['Total Time Taken'].mean())\n",
+    "    verificationMemoryUsage.append(\n",
+    "        original_dfs[dataset]['Verification Memory Usage'].mean())\n",
+    "    retrievalTimeTaken.append(original_dfs[dataset]['Retrieval Time Taken'].mean())\n",
+    "    retrievalMemoryUsage.append(original_dfs[dataset]['Retrieval Memory Usage'].mean())\n",
     "\n",
     "summary_df = pd.DataFrame({\n",
-    "    \"Use Case\": ['Supervisor Student', 'Supervisor Student Protocol', 'Doctor Nurse', 'Doctor Nurse Protocol', 'Employee Protocol'],\n",
+    "    \"Algorithm\": ['Ed25519', 'Secp256k1'],\n",
     "    \"Delegation Time Taken\": delegationTimeTaken,\n",
+    "    \"Delegation Memory Usage\": delegationMemoryUsage,\n",
     "    \"Verification Time Taken\": verificationTimeTaken,\n",
-    "    \"Total Time Taken\": totalTimeTaken\n",
+    "    \"Verification Memory Usage\": verificationMemoryUsage,\n",
+    "    \"Retrieval Time Taken\": retrievalTimeTaken,\n",
+    "    \"Retrieval Memory Usage\": retrievalMemoryUsage\n",
     "})\n",
     "\n",
-    "summary_df.to_csv('./summary.csv')"
+    "summary_df.to_csv('./performance-summary.csv')"
    ]
   },
   {
